--- a/ProyectoWebConFlexbox/index.html
+++ b/ProyectoWebConFlexbox/index.html
@@ -4,37 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel="stylesheet" href="css/fontawesome.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" >
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
     <title>Web con Flexbox</title>
 </head>
 <body>
     <div class="padre">
-        <header class="header">
+        <header class="header margen-interno">            
             <div class="menu">
-                <div class="logo"></div>
-                <div class="nav"></div>
-                <div class="social"></div>
+                <div class="logo">
+                    <a href="index.html">LogoCorporativo</a>
+                </div>
+                <div class="nav">
+                    <a href="#"><i class="fas fa-home"></i>Inicio</a>
+                    <a href="#"><i class="fas fa-users"></i>Nosotros</a>
+                    <a href="#"><i class="fab fa-servicestack"></i>Servicios</a>
+                    <a href="#"><i class="far fa-newspaper"></i>Noticias</a>
+                    <a href="#"><i class="far fa-envelope"></i>Contacto</a>
+                </div>
+                <div class="social">
+                    <div><a href="#"><i class="fab fa-facebook"></i></a></div>
+                    <div><a href="#"><i class="fab fa-twitter-square"></i></a></div>
+                </div>
             </div>
             <div class="texto-principal">
-                <h1></h1>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, reprehenderit animi sunt commodi harum quam sit in fugiat possimus optio dolores doloremque illo, excepturi suscipit natus maiores officia explicabo accusamus? Veniam quam vitae nulla ipsam voluptatem numquam at, debitis tempora? Hic voluptatum maxime pariatur ipsam quis architecto eius delectus consectetur.</h1>
             </div>
         </header>
-        <section class="section">
+        <section class="section margen-interno">
             <div class="articulos">
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <article class="article"></article>
-                <nav class="navegacion"></nav>
+                <article class="article">
+                    <img src="imagenes/2.jpg" alt="">
+                    <h3>29 de diciembre 2019</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                </article>
+                <article class="article">
+                    <img src="imagenes/2.jpg" alt="">
+                    <h3>29 de diciembre 2019</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                </article>
+                <article class="article">
+                    <img src="imagenes/2.jpg" alt="">
+                    <h3>29 de diciembre 2019</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                </article>
+                <article class="article">
+                    <img src="imagenes/2.jpg" alt="">
+                    <h3>29 de diciembre 2019</h3>
+                    <h2>Título de la noticia</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                </article>
+                <nav class="navegacion">
+                    <a href="#">Inicio</a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">Final</a>
+                </nav>
             </div>
             <aside class="aside">
-                <div class="publicidad"></div>
-                <div class="publicidad"></div>
+                <div class="publicidad">
+                    <h4>Aside</h4>
+                    <img src="imagenes/2.jpg" alt="">
+                </div>
+                <div class="publicidad">
+                    <h4>Aside</h4>
+                    <img src="imagenes/2.jpg" alt="">
+                </div>
             </aside>
         </section>
-        <footer class="footer">
-            <nav class="pie"></nav>
+        <footer class="footer margen-interno">
+            <nav class="pie">
+                <a href="#">Desarrollado por José Haro</a>
+            </nav>
         </footer>
     </div>
 </body>
