--- a/ProyectoWebConFlexbox/index.html
+++ b/ProyectoWebConFlexbox/index.html
@@ -12,24 +12,24 @@
 </head>
 <body>
     <div class="padre">
-        <header class="header margen-interno">            
-            <div class="menu">
+        <header class="header">            
+            <div class="menu margen-interno">
                 <div class="logo">
                     <a href="index.html">LogoCorporativo</a>
                 </div>
                 <div class="nav">
-                    <a href="#"><i class="fas fa-home"></i>Inicio</a>
-                    <a href="#"><i class="fas fa-users"></i>Nosotros</a>
-                    <a href="#"><i class="fab fa-servicestack"></i>Servicios</a>
-                    <a href="#"><i class="far fa-newspaper"></i>Noticias</a>
-                    <a href="#"><i class="far fa-envelope"></i>Contacto</a>
+                    <a href="#"><i class="fas fa-home"></i><span class="off">Inicio</span></a>
+                    <a href="#"><i class="fas fa-users"></i><span class="off">Nosotros</span></a>
+                    <a href="#"><i class="fab fa-servicestack"></i><span class="off">Servicios</span></a>
+                    <a href="#"><i class="far fa-newspaper"></i><span class="off">Noticias</span></a>
+                    <a href="#"><i class="far fa-envelope"></i><span class="off">Contacto</span></a>
                 </div>
                 <div class="social">
                     <div><a href="#"><i class="fab fa-facebook"></i></a></div>
                     <div><a href="#"><i class="fab fa-twitter-square"></i></a></div>
                 </div>
             </div>
-            <div class="texto-principal">
+            <div class="texto-principal margen-interno">
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, reprehenderit animi sunt commodi harum quam sit in fugiat possimus optio dolores doloremque illo, excepturi suscipit natus maiores officia explicabo accusamus? Veniam quam vitae nulla ipsam voluptatem numquam at, debitis tempora? Hic voluptatum maxime pariatur ipsam quis architecto eius delectus consectetur.</h1>
             </div>
         </header>
@@ -40,24 +40,28 @@
                     <h3>29 de diciembre 2019</h3>
                     <h2>Título de la noticia</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                    <a href="#">Leer más...</a>
                 </article>
                 <article class="article">
                     <img src="imagenes/2.jpg" alt="">
                     <h3>29 de diciembre 2019</h3>
                     <h2>Título de la noticia</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                    <a href="#">Leer más...</a>               
                 </article>
                 <article class="article">
                     <img src="imagenes/2.jpg" alt="">
                     <h3>29 de diciembre 2019</h3>
                     <h2>Título de la noticia</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                    <a href="#">Leer más...</a>
                 </article>
                 <article class="article">
                     <img src="imagenes/2.jpg" alt="">
                     <h3>29 de diciembre 2019</h3>
                     <h2>Título de la noticia</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ex tempora, sit dolorem totam autem veritatis amet nobis ab pariatur accusamus repellendus iure quos corporis cum sint possimus delectus libero.</p>
+                    <a href="#">Leer más...</a>
                 </article>
                 <nav class="navegacion">
                     <a href="#">Inicio</a>
@@ -69,6 +73,10 @@
                 </nav>
             </div>
             <aside class="aside">
+                <div class="publicidad">
+                    <h4>Aside</h4>
+                    <img src="imagenes/2.jpg" alt="">
+                </div>
                 <div class="publicidad">
                     <h4>Aside</h4>
                     <img src="imagenes/2.jpg" alt="">
