Updating files Website

--- a/TCyA/index.html
+++ b/TCyA/index.html
@@ -33,17 +33,17 @@
                 <h1>AT&C</h1>                
                 <div class="contenedor-productos">
                     <div class="producto" id="uno">
-                        <img src="images/servicio.png" alt="">
+                        <a href=""><img src="images/freebuds.png" alt=""></a>                        
                         <h2>Accesorios</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore voluptatem cupiditate nostrum praesentium unde libero dolorum illum, hic iure cum ut, assumenda magnam minus recusandae nobis esse ipsa.</p>
                     </div>
                     <div class="producto" id="dos">
-                        <img src="images/tablet.png" alt="">
+                        <a href=""><img src="images/ipa.png" alt=""></a>                        
                         <h2>Tablets</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore voluptatem cupiditate nostrum praesentium unde libero dolorum illum, hic iure cum ut, assumenda magnam minus recusandae nobis esse ipsa.</p>
                     </div>
                     <div class="producto" id="tres">
-                        <img src="images/cel_color.png" alt="">
+                        <a href=""><img src="images/purple.png" alt=""></a>                        
                         <h2>Celulares</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempore voluptatem cupiditate nostrum praesentium unde libero dolorum illum, hic iure cum ut, assumenda magnam minus recusandae nobis esse ipsa.</p>
                     </div>
